force-app/main/default/objects/AddOn__c/AddOn__c.object-meta.xml
<CustomObject>
    <label>AddOn</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AddOns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>