force-app/main/default/objects/AddOn__c/fields/Accommodation_night__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_night__c</fullName>
    <label>Accommodation night</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>