force-app/main/default/objects/AddOn__c/fields/Add_On_Type__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Type__c</fullName>
    <formula>IF( RecordType.Name==&apos;AE/SB&apos;,  IF( TEXT(AE_SB__r.Type__c)==&apos;Arrive Early&apos; , &apos;Arrive Early&apos;,&apos;Stay Behind&apos;),  
 IF(RecordType.Name==&apos;Stopover&apos;,  IF(TEXT(Sub_Stopover__r.type__c)==&apos;Pre Tour&apos;, &apos;Pre-Stopover&apos;,&apos;Post-Stopover&apos;) , RecordType.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add On Type</label>
    <type>Text</type>
</CustomField>