force-app/main/default/objects/AddOn__c/fields/AddOn_Cancelled_On__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Cancelled_On__c</fullName>
    <label>AddOn Cancelled On</label>
    <type>Date</type>
</CustomField>