force-app/main/default/objects/AddOn__c/fields/Addon_Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Addon_Coupon_Amount__c</fullName>
    <label>Addon Coupon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>