force-app/main/default/objects/AddOn__c/fields/AddOn_Name__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Name__c</fullName>
    <formula>IF(Pre_Post_Stopover__c  == &apos;Pre Tour&apos;, &apos;Pre Tour Stopover - &apos;+Order_Line_Item__r.ordexp_TAD_Order__r.Name ,  IF(Pre_Post_Stopover__c  == &apos;Post Tour&apos;, &apos;Post Tour Stopover - &apos;+Order_Line_Item__r.ordexp_TAD_Order__r.Name,  Name ) )</formula>
    <label>AddOn Name</label>
    <type>Text</type>
</CustomField>