force-app/main/default/objects/AddOn__c/fields/AddOn_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Name_Text__c</fullName>
    <formula>IF(RecordType.DeveloperName =&quot;AE_SB&quot;,&apos;AddOn &apos;+Name +&apos; &apos;+ AE_SB__r.Name,IF(RecordType.DeveloperName =&quot;mp_AE_SB_Accommodation&quot;,&apos;AddOn &apos;+Name +&apos; &apos;+ AE_SB_Accommodation__r.Name,IF(RecordType.DeveloperName =&quot;Airline_Upgrade&quot;,&apos;AddOn &apos;+Name +&apos; &apos;+ Airline_Upgrade__r.Name,IF(RecordType.DeveloperName =&quot;Land_Activity&quot;,&apos;AddOn &apos;+Name +&apos; &apos;+ land_activity__r.Name,IF(RecordType.DeveloperName =&quot;SubStopover&quot;,&apos;AddOn &apos;+Name +&apos; &apos;+ Sub_Stopover__r.Name,IF(RecordType.DeveloperName =&quot;Insurance&quot;,&apos;AddOn &apos;+Name +&apos; &apos;+ RecordType.Name,null))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddOn Name(Text)</label>
    <type>Text</type>
</CustomField>