force-app/main/default/objects/AddOn__c/fields/Addon_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Addon_Refund_Amount__c</fullName>
    <label>Addon Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>