force-app/main/default/objects/AddOn__c/fields/AE_Nights__c.field-meta.xml
<CustomField>
    <fullName>AE_Nights__c</fullName>
    <label>AE Nights</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>