force-app/main/default/objects/AddOn__c/fields/AE_or_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_or_SB__c</fullName>
    <formula>IF( (ordexp_new_aesb_date__c &lt;= Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_departure_date__r.date__c ), &apos;AE&apos;, &apos;SB&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE or SB?</label>
    <type>Text</type>
</CustomField>