force-app/main/default/objects/AddOn__c/fields/AE_Or_SB_Type__c.field-meta.xml
<CustomField>
    <fullName>AE_Or_SB_Type__c</fullName>
    <formula>TEXT(AE_SB__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Or SB Type</label>
    <type>Text</type>
</CustomField>