force-app/main/default/objects/AddOn__c/fields/AE_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_SB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>AE_SB__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns_AESB</relationshipName>
    <type>Lookup</type>
</CustomField>