force-app/main/default/objects/AddOn__c/fields/AE_SB_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB Accommodation</label>
    <referenceTo>mp_AE_SB_Accommodation__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns</relationshipName>
    <type>Lookup</type>
</CustomField>