force-app/main/default/objects/AddOn__c/fields/AE_SB_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Name__c</fullName>
    <formula>AE_SB__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE/SB Name</label>
    <type>Text</type>
</CustomField>