force-app/main/default/objects/AddOn__c/fields/AE_SB_Note__c.field-meta.xml
<CustomField>
    <fullName>AE_SB_Note__c</fullName>
    <label>AE/SB Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>