force-app/main/default/objects/AddOn__c/fields/Airline_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline Upgrade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>airline_upgrade__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>airline_upgrade__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns_airlineUpgrade</relationshipName>
    <type>Lookup</type>
</CustomField>