force-app/main/default/objects/AddOn__c/fields/Airline_Upgrade_Name__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade_Name__c</fullName>
    <formula>Airline_Upgrade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airline Upgrade Name</label>
    <type>Text</type>
</CustomField>