force-app/main/default/objects/AddOn__c/fields/Attribution__c.field-meta.xml
<CustomField>
    <fullName>Attribution__c</fullName>
    <formula>1- (Credit_Utilized__c/ordexp_amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribution %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>