force-app/main/default/objects/AddOn__c/fields/Converted_from_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Legacy__c</fullName>
    <formula>Order_Line_Item__r.ordexp_TAD_Order__r.Converted_from_Legacy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted from Legacy</label>
    <type>Checkbox</type>
</CustomField>