force-app/main/default/objects/AddOn__c/fields/Customisation__c.field-meta.xml
<CustomField>
    <fullName>Customisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customisation</label>
    <referenceTo>Order_Communication_POE__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns_customisation</relationshipName>
    <type>Lookup</type>
</CustomField>