force-app/main/default/objects/AddOn__c/fields/Customisation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Amount__c</fullName>
    <label>Customisation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>