force-app/main/default/objects/AddOn__c/fields/Date_Display_on_Accordian__c.field-meta.xml
<CustomField>
    <fullName>Date_Display_on_Accordian__c</fullName>
    <formula>IF(RecordType.DeveloperName ==&apos;AE_SB&apos;,  ordexp_new_aesb_date__c ,  Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_departure_date__r.date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Display on Accordian</label>
    <type>Date</type>
</CustomField>