force-app/main/default/objects/AddOn__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deal</description>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns</relationshipName>
    <type>Lookup</type>
</CustomField>