force-app/main/default/objects/AddOn__c/fields/Departure_Date_Name__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Name__c</fullName>
    <formula>Departure_Date__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date Name</label>
    <type>Text</type>
</CustomField>