force-app/main/default/objects/AddOn__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <formula>Sub_Stopover__r.Destination__c   &amp;   land_activity__r.title__c   &amp;    AE_SB__r.City__c   &amp; TEXT(Airline_Upgrade__r.Cabin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail</label>
    <type>Text</type>
</CustomField>