force-app/main/default/objects/AddOn__c/fields/ffStatus__c.field-meta.xml
<CustomField>
    <fullName>ffStatus__c</fullName>
    <label>ffStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unprocessed</fullName>
                <default>true</default>
                <label>Unprocessed</label>
            </value>
            <value>
                <fullName>Processing - Cancellation</fullName>
            </value>
            <value>
                <fullName>Processed - Addon Cancellation</fullName>
            </value>
            <value>
                <fullName>Pending Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>