force-app/main/default/objects/AddOn__c/fields/final_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>final_Cancellation_Amount__c</fullName>
    <description>Cancellation Amount for add on after approved</description>
    <label>final Cancellation Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>