force-app/main/default/objects/AddOn__c/fields/General_Pricing__c.field-meta.xml
<CustomField>
    <fullName>General_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Pricing</label>
    <referenceTo>General_Pricing__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns</relationshipName>
    <type>Lookup</type>
</CustomField>