force-app/main/default/objects/AddOn__c/fields/Itinerary_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Day_Number__c</fullName>
    <formula>land_activity__r.Day_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Itinerary Day Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>