force-app/main/default/objects/AddOn__c/fields/LA_Activity_time_of_day__c.field-meta.xml
<CustomField>
    <fullName>LA_Activity_time_of_day__c</fullName>
    <formula>IF( ISPICKVAL(land_activity__r.Activity_time_of_day__c, &apos;Morning&apos;), &apos;Morning&apos;, 
  IF( ISPICKVAL(land_activity__r.Activity_time_of_day__c, &apos;Afternoon&apos;), &apos;Afternoon&apos;,
   IF( ISPICKVAL(land_activity__r.Activity_time_of_day__c, &apos;Evening&apos;), &apos;Evening&apos;,
   IF( ISPICKVAL(land_activity__r.Activity_time_of_day__c, &apos;Evening&apos;), &apos;Evening&apos;, &apos;NONE&apos;)) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LA Activity time of day</label>
    <type>Text</type>
</CustomField>