force-app/main/default/objects/AddOn__c/fields/LA_UID__c.field-meta.xml
<CustomField>
    <fullName>LA_UID__c</fullName>
    <formula>Text(land_activity__r.Activity_time_of_day__c) + &quot;;&quot; + Text(land_activity__r.itinerary__r.Day_number__c)</formula>
    <label>LA UID</label>
    <type>Text</type>
</CustomField>