force-app/main/default/objects/AddOn__c/fields/land_activity__c.field-meta.xml
<CustomField>
    <fullName>land_activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>land activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria LA Deal</errorMessage>
        <filterItems>
            <field>land_activity__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>land_activity__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns</relationshipName>
    <type>Lookup</type>
</CustomField>