force-app/main/default/objects/AddOn__c/fields/Land_Activity_Day__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_Day__c</fullName>
    <formula>land_activity__r.Day_Number__c</formula>
    <label>Land Activity Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>