force-app/main/default/objects/AddOn__c/fields/Land_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>Land_Activity_Time__c</fullName>
    <formula>TEXT(land_activity__r.Activity_time_of_day__c)</formula>
    <label>Land Activity Time</label>
    <type>Text</type>
</CustomField>