force-app/main/default/objects/AddOn__c/fields/mm_aesb_accommodation_amount__c.field-meta.xml
<CustomField>
    <fullName>mm_aesb_accommodation_amount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>