force-app/main/default/objects/AddOn__c/fields/ordexp_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_amount__c</fullName>
    <label>Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>