force-app/main/default/objects/AddOn__c/fields/ordexp_commission__c.field-meta.xml
<CustomField>
    <fullName>ordexp_commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>