force-app/main/default/objects/AddOn__c/fields/ordexp_new_aesb_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_new_aesb_date__c</fullName>
    <inlineHelpText>The arrival date you select is the date the customer will depart from their departure city. It is NOT the date they are arriving at their first destination</inlineHelpText>
    <label>New AE/SB Date</label>
    <type>Date</type>
</CustomField>