force-app/main/default/objects/AddOn__c/fields/ordexp_rct_Name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_rct_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddOn RCT Name</label>
    <type>Text</type>
</CustomField>