force-app/main/default/objects/AddOn__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Value does not exist or does not match filter criteria Pax OLI</errorMessage>
        <filterItems>
            <field>customer_POE__c.Order_Line_Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Order_Line_Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>customer_POE__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns</relationshipName>
    <type>Lookup</type>
</CustomField>