force-app/main/default/objects/AddOn__c/fields/Pre_Post_Stopover__c.field-meta.xml
<CustomField>
    <fullName>Pre_Post_Stopover__c</fullName>
    <formula>TEXT(Sub_Stopover__r.type__c)</formula>
    <label>Pre/Post Stopover</label>
    <type>Text</type>
</CustomField>