force-app/main/default/objects/AddOn__c/fields/RecordType_Select__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Select__c</fullName>
    <label>RecordType Select</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE/SB</fullName>
                <label>0120p000000AxLtAAK</label>
            </value>
            <value>
                <fullName>Airline Upgrade</fullName>
            </value>
            <value>
                <fullName>Customisation</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Land Activity</fullName>
            </value>
            <value>
                <fullName>SubStopover</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>