force-app/main/default/objects/AddOn__c/fields/Refund_No_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_No_Cancellation_Amount__c</fullName>
    <label>Refund No Cancellation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>