force-app/main/default/objects/AddOn__c/fields/SB_Date__c.field-meta.xml
<CustomField>
    <fullName>SB_Date__c</fullName>
    <inlineHelpText>From legacy</inlineHelpText>
    <label>SB Date</label>
    <type>Date</type>
</CustomField>