force-app/main/default/objects/AddOn__c/fields/SB_Nights__c.field-meta.xml
<CustomField>
    <fullName>SB_Nights__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SB Nights</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>