force-app/main/default/objects/AddOn__c/fields/SB_No_Nights__c.field-meta.xml
<CustomField>
    <fullName>SB_No_Nights__c</fullName>
    <inlineHelpText>Data here has come from information on the linked legacy order. Not to be used for POE orders.</inlineHelpText>
    <label>SB # Nights</label>
    <length>3</length>
    <type>Text</type>
</CustomField>