force-app/main/default/objects/AddOn__c/fields/Stopover_Booked__c.field-meta.xml
<CustomField>
    <fullName>Stopover_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stopover Booked</label>
    <type>Checkbox</type>
</CustomField>