force-app/main/default/objects/AddOn__c/fields/Sub_Stopover__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stopover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stopover</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sub_stopover__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sub_stopover__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns_subStopover</relationshipName>
    <type>Lookup</type>
</CustomField>