force-app/main/default/objects/AddOn__c/fields/Tad_Order_Id_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Tad_Order_Id_18_digit__c</fullName>
    <formula>CASESAFEID(Order_Line_Item__r.ordexp_TAD_Order__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tad Order Id 18 digit</label>
    <type>Text</type>
</CustomField>