force-app/main/default/objects/AddOn__c/fields/TAD_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order_Id__c</fullName>
    <formula>Order_Line_Item__r.ordexp_TAD_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order Id</label>
    <type>Text</type>
</CustomField>