force-app/main/default/objects/AddOn__c/fields/tad_order_rt_name__c.field-meta.xml
<CustomField>
    <fullName>tad_order_rt_name__c</fullName>
    <formula>Order_Line_Item__r.ordexp_TAD_Order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order RT Name</label>
    <type>Text</type>
</CustomField>