force-app/main/default/objects/AddOn__c/fields/Visa__c.field-meta.xml
<CustomField>
    <fullName>Visa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visa</label>
    <referenceTo>Visa__c</referenceTo>
    <relationshipLabel>AddOns</relationshipLabel>
    <relationshipName>AddOns_visa</relationshipName>
    <type>Lookup</type>
</CustomField>