force-app/main/default/objects/AddOn__c/recordTypes/AE_SB.recordType-meta.xml
<RecordType>
    <fullName>AE_SB</fullName>
    <active>true</active>
    <label>AE/SB</label>
</RecordType>