force-app/main/default/objects/AddOn__c/recordTypes/Airline_Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Airline_Upgrade</fullName>
    <active>true</active>
    <label>Airline Upgrade</label>
</RecordType>