force-app/main/default/objects/AddOn__c/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <label>Visa &amp; Insurance</label>
</RecordType>