force-app/main/default/objects/AddOn__c/recordTypes/mp_AE_SB_Accommodation.recordType-meta.xml
<RecordType>
    <fullName>mp_AE_SB_Accommodation</fullName>
    <active>true</active>
    <label>AE/SB Accommodation</label>
</RecordType>