force-app/main/default/objects/AddOn__c/recordTypes/SubStopover.recordType-meta.xml
<RecordType>
    <fullName>SubStopover</fullName>
    <active>true</active>
    <label>Stopover</label>
</RecordType>