force-app/main/default/objects/AddOn__c/validationRules/Restrict_SB_above_30days_of_dd.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_SB_above_30days_of_dd</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $Permission.AddOn_AESB_date_override ),
RecordType.DeveloperName  = &apos;AE_SB&apos;,
ISPICKVAL( AE_SB__r.Type__c , &apos;Stay Behind&apos;) , 
OR( (Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_departure_date__r.ordexp_return_date__c + 30  )&lt; ordexp_new_aesb_date__c , (Order_Line_Item__r.ordexp_TAD_Order__r.ordexp_departure_date__r.ordexp_return_date__c  ) &gt;= ordexp_new_aesb_date__c))
&amp;&amp; (Order_Line_Item__r.ordexp_TAD_Order__r.Converted_from_Legacy__c =false)</errorConditionFormula>
    <errorDisplayField>Accommodation_night__c</errorDisplayField>
    <errorMessage>Stay behind should be no more than 30 days after return date</errorMessage>
</ValidationRule>